5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1734_2504.log
== TEST (2019-05-15 22:42:24) 
-- CODE:
qiv=int(input("quantidade inicial de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=float(input("percentual de virus: "))
pl=float(input("percentual de leucocitos: "))
c=0
while(qil<qiv):
	pvv=qiv*(pv/100)
	qiv=qiv+pvv
	pll=qil*(pl/100)
	qil=qil+pll
	c=c+1
print(c)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:43:43) 
-- CODE:
qiv=int(input("quantidade inicial de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=float(input("percentual de virus: "))
pl=float(input("percentual de leucocitos: "))
c=0
while(qil<qiv):
	pvv=qiv*(pv/100)
	qiv=qiv+pvv
	pll=qil*(pl/100)
	qil=qil+pll
	c=c+1
print(c)
-- EXECUTION TIME:
0.156775
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
8
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:44:32) 
-- CODE:
qiv=int(input("quantidade inicial de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=float(input("percentual de virus: "))
pl=float(input("percentual de leucocitos: "))
c=0
while(qil<2qiv):
	pvv=qiv*(pv/100)
	qiv=qiv+pvv
	pll=qil*(pl/100)
	qil=qil+pll
	c=c+1
print(c)
-- EXECUTION TIME:
0.313703
-- ERROR:
  File "/home/codebench/codes/1734/2504/main.py", line 6
    while(qil<2qiv):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:44:34) 
-- CODE:
qiv=int(input("quantidade inicial de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=float(input("percentual de virus: "))
pl=float(input("percentual de leucocitos: "))
c=0
while(qil<2qiv):
	pvv=qiv*(pv/100)
	qiv=qiv+pvv
	pll=qil*(pl/100)
	qil=qil+pll
	c=c+1
print(c)
-- ERROR:
File "XXXX", line 6
    while(qil<2qiv):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:44:46) 
-- CODE:
qiv=int(input("quantidade inicial de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=float(input("percentual de virus: "))
pl=float(input("percentual de leucocitos: "))
c=0
while(qil<2*qiv):
	pvv=qiv*(pv/100)
	qiv=qiv+pvv
	pll=qil*(pl/100)
	qil=qil+pll
	c=c+1
print(c)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:45:28) 
-- CODE:
qiv=int(input("quantidade inicial de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=float(input("percentual de virus: "))
pl=float(input("percentual de leucocitos: "))
c=0
while(qil<2*qiv):
	pvv=qiv*(pv/100)
	qiv=qiv+pvv
	pll=qil*(pl/100)
	qil=qil+pll
	c=c+1
print(c)
-- EXECUTION TIME:
0.130289
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
